# TaskManagerCLI

./: CMakeLists.txt  README.md
.cache/clangd/index/: core.cpp.6A30B1FF2B54CB33.idx  core.hpp.59DC2A4E29380EA0.idx  filesystem.hpp.07BED27825C3695B.idx  input.hpp.5DA8E5D44555CD2D.idx  main.cpp.EC62F8310720A217.idx  tasks.cpp.5DEB344E4A7430A8.idx  utils.cpp.894E258D6C847A08.idx
app/: main.cpp
include/: core.hpp  filesystem.hpp  input.hpp  tasks.hpp  utils.hpp
src/: core.cpp  filesystem.cpp  input.cpp  tasks.cpp  utils.cpp
tests/: input_test.cpp
